--- a/data-wrangling-projects/README
+++ b/data-wrangling-projects/README
@@ -1,1 +1,8 @@
+# U.S. Presidential Elections Dataset (1976–2024) Analysis
+
+This project explores historical and recent (at the time of this work) U.S. presidential election data, focusing on voter turnout and state-level differences. 
+
+The analysis highlights trends and patterns over time using **data cleaning, transformation, and visualization**.  
+
+The project demonstrates a clear approach to working with real-world datasets, emphasizing both preparation and insight, rather than aiming for a production-ready pipeline.
 
