--- a/stats-projects/MATH9102_LOGR_FootballSalaries.Rmd
+++ b/stats-projects/MATH9102_LOGR_FootballSalaries.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Statistical Analysis - Binary Logistic Regression - Football Salaries Dataset"
 subtitle: "PSI CA Part Three - Logistic Regression" 
-author: "Andrea Gehrpelli"
+author: "Andrea Gherpelli"
 date: ""
 output:
   html_document:
@@ -1429,3 +1429,4 @@ Pallant, J. (2020). SPSS Survival Manual: A Step-by-Step Guide to Data Analysis 
 Watson, D., Clark, L. A., & Tellegen, A. (1988). Development and validation of brief measures of positive and negative affect: The PANAS scales. Journal of Personality and Social Psychology, 54(6), 1063–1070.
 
 Tabachnik, B. G., & Fidell, L. S. (2013). Using Multivariate Statistics (6th ed.). Pearson Education.
+
